OO-8115: group membership history implementation